--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,5 @@
-body {font-family: Arial, Helvetica, sans-serif;}
+div.modal1 {font-family: Arial, Helvetica, sans-serif;}
 
-/* Full-width input fields */
 input[type=text], input[type=password] {
   width: 100%;
   padding: 12px 20px;
