--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,31 @@ section{
     padding: 5rem 10%;
 }
 
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+        transform: translateY(3rem);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.btn{
+    display: inline-block;
+    background: var(--black);
+    margin-top: 1rem;
+    color: var(--white);
+    padding: 1rem 3rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.btn:hover{
+    background: var(--main-color);
+}
+
 .header{
     position: sticky;
     top: 0;
@@ -83,11 +108,90 @@ section{
 
 
 
+/* Home Page */
+.home{
+    padding: 0;
+}
+
+.home .slide{
+    text-align: center;
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover !important;
+    background-position: center !important;
+    min-height: 60rem;
+    position: relative;
+    isolation: isolate;
+}
+
+.home .slide::after{
+    content: '';
+    position: absolute;
+    z-index: -1;
+    inset: 0;
+    background: var(--black);
+    opacity: 0.6;
+}
+
+.home .slide .content{
+    width: 85rem;
+    display: none;
+    
+}
 
 
+.home .swiper-slide-active .content{
+    display: inline-block;
+}
+
+.home .slide .content span{
+    display: block;
+    font-size: 2.2rem;
+    color: var(--white);
+    padding-bottom: 1rem;
+    animation: fadeIn 0.4s linear backwards 0.2s;
+}
+
+.home .slide .content h3{
+    font-size: 6vw;
+    color: var(--white);
+    text-transform: uppercase;
+    line-height: 1;
+    text-shadow: var(--text-shadow);
+    padding: 1rem 0;
+    animation: fadeIn 0.4s linear backwards 0.4s;
+}
+
+.home .slide .content p{
+    font-size: 2.2rem;
+    color: var(--white);
+    padding-bottom: 2rem;
+    animation: fadeIn 0.4s linear backwards 0.2s;
+}
+
+.home .slide .content .btn{
+    animation: fadeIn 0.4s linear backwards 0.6s;
+}
+
+.home .swiper-button-next,
+.home .swiper-button-prev{
+    height: 7rem;
+    width: 7rem;
+    color: var(--white);
+}
+
+.home .swiper-button-next:hover,
+.home .swiper-button-prev:hover{
+    color: var(--main-color);
+}
 
 
-
+.home .swiper-button-next::after,
+.home .swiper-button-prev::after{
+    font-size: 3rem;
+}
 
 
 
@@ -178,6 +282,10 @@ section{
 
     header section{
         padding: 3rem 2rem;
+    }
+
+    .home .slide .content h3{
+        font-size: 10vw;
     }
 
 }
