--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,39 @@ section{
     }
 }
 
+.heading{
+    background-size: cover !important;
+    background-position: center !important;
+    padding-top: 10rem;
+    padding-bottom: 15rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    isolation: isolate;
+}
+
+.heading::after{
+    content: '';
+    position: absolute;
+    z-index: -1;
+    inset: 0;
+    background: var(--black);
+    opacity: 0.6;
+}
+
+.heading h1{
+    font-size: 10rem;
+    color: var(--white);
+    text-transform: uppercase;
+    line-height: 1;
+    text-shadow: var(--text-shadow);
+    padding: 1rem 0;
+}
+
+
+
+
 .btn{
     display: inline-block;
     background: var(--black);
@@ -74,6 +107,8 @@ section{
     background: var(--main-color);
 }
 
+
+/* Header and navbar */
 .header{
     position: sticky;
     top: 0;
@@ -105,7 +140,6 @@ section{
     color: var(--black);
     display: none;
 }
-
 
 
 /* Home Page */
@@ -195,7 +229,6 @@ section{
 
 
 /* FAQ's in Home Page */
-
 .home-faq{
     padding-top: 5rem;
     padding-bottom: 2rem;
@@ -272,16 +305,7 @@ section{
 }
 
 
-
-
-
-
-
-
-
-
 /* About in Home Page */
-
 .home-about{
     display: flex;
     align-items: center;
@@ -317,6 +341,120 @@ section{
 
 
 
+.about{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap:3rem;
+    justify-content: center;
+}
+
+.about .image{
+    flex: 1 1 10rem;
+}
+
+.about .image img{
+    width: 100%;
+}
+
+.about .content{
+    flex: 1 1 41rem;
+    text-align: center;
+}
+
+.about .content h3{
+    font-size: 3rem;
+    color: var(--black);
+}
+
+.about .content p{
+    font-size: 1.5rem;
+    color: var(--light-black);
+    padding: 1rem 0;
+    line-height: 2;
+}
+
+.about .content .icons-container{
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    margin-top: 2rem;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.about .content .icons-container .icons{
+    padding: 2rem;
+    background-color: var(--light-bg);
+    border-radius: 1rem;
+    flex: 1 1 16rem;
+}
+
+.about .content .icons-container .icons i{
+    font-size: 4rem;
+    margin-bottom: 2rem;
+    color: var(--main-color);
+}
+
+.about .content .icons-container .icons span{
+    font-size: 1.5rem;
+    color: var(--light-black);  
+    display: block;  
+}
+
+
+/* Privacy Policy */
+.pp{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap:3rem;
+    justify-content: center;
+}
+
+.pp .pp-container{
+    flex: 1 1 41rem;
+    text-align: center;
+}
+
+.pp .pp-container h2{
+    font-size: 2.5rem;
+    color: var(--black);
+}
+
+.pp .pp-container p{
+    font-size: 1.5rem;
+    color: var(--light-black);
+    padding: 1rem 0;
+    line-height: 2;
+}
+
+
+/* Terms of Service */
+.tos{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap:3rem;
+    justify-content: center;
+}
+
+.tos .tos-container{
+    flex: 1 1 41rem;
+    text-align: center;
+}
+
+.tos .tos-container h2{
+    font-size: 2.5rem;
+    color: var(--black);
+}
+
+.tos .tos-container p{
+    font-size: 1.5rem;
+    color: var(--light-black);
+    padding: 1rem 0;
+    line-height: 2;
+}
 
 
 
@@ -334,6 +472,14 @@ section{
 
 
 
+
+
+
+
+
+
+
+/* Footer */
 .footer{
     background-color: var(--black);
     background-size: cover;
