--- a/css/style.css
+++ b/css/style.css
@@ -732,8 +732,39 @@ section{
     padding-right: 2rem;
 }
 
+.footer .box-conteiner .box .logout .logout_footer{
+    display: block;
+}
+
+.footer .box-conteiner .box .logout .logout_footer input{
+    background: none;
+    color: var(--light-white);
+    font-size: 1.5rem;
+    padding-bottom: 1rem;
+}
+
+.footer .box-conteiner .box .logout .logout_footer i{
+    color: var(--main-color);
+    padding-right: 0.5rem;
+    font-size: 1.5rem;
+    transition: 0.2s linear;
+}
+
+
+.footer .box-conteiner .box .logout .logout_footer i input{
+    color: var(--main-color);
+    padding-right: 0.5rem;
+    transition: 0.2s linear;
+}
+
+.footer .box-conteiner .box .logout .logout_footer i input:hover{
+    color: var(--main-color);
+    padding-right: 2rem;
+}
+
+
+
 .footer .box-conteiner .box img{
-    /* center the image in the box */
     display: block;
     margin: auto;
     width: 20rem;
