--- a/css/style.css
+++ b/css/style.css
@@ -472,6 +472,8 @@ section{
 
 
 
+
+
 /* Login Page */
 .login{
     display: flex;
@@ -1011,6 +1013,90 @@ section{
 
 
 
+/* Profile */
+.profile{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap:3rem;
+    justify-content: center;
+    margin : 5rem;
+}
+
+.profile .profile_pic{
+    width: 30rem;
+    height: 30rem;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 0 0.5rem rgba(0,0,0,0.3);
+    display: 1 1 41rem;
+}
+
+.profile .profile_pic img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.profile .profile_info{
+    width: 30rem;
+    display: 1 1 41rem;
+    border-left: var(--main-color) 5px solid;
+    padding-left: 3rem;
+}
+
+.profile .profile_info .title{
+    font-size: 3rem;
+    padding-bottom: 1rem;
+}
+
+.profile .profile_info .info{
+    font-size: 1.5rem;
+    padding-bottom: 1rem;
+    padding-left: 2rem;
+}
+
+.profile .profile_info .info tr{
+    padding-bottom: 1rem;
+}
+
+.profile .profile_info .info tr th{
+    padding-right: 1rem;
+    text-align: left;
+}
+
+.profile .profile_info .info tr td{
+    padding-left: 1rem;
+    text-align: left;
+}
+
+.profile .edit_profile{
+    display: 1 1 41rem;
+    border-radius: 50%;
+    padding-left: 3rem;
+}
+
+.profile .edit_profile a{
+    display: block;
+    font-size: 1.5rem;
+    padding-bottom: 1rem;
+    color: var(--black);
+}
+
+.profile .edit_profile a:hover{
+    color: var(--main-color);
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1145,6 +1231,22 @@ section{
         display: block;
         margin: 2rem auto;
         align-items: center;
+    }
+
+
+}
+
+@media (max-width: 650px){
+    
+    .profile .profile_pic{
+        width: 20rem;
+        height: 20rem;
+    }
+
+
+    .profile .profile_info{
+        border-left: none;
+        padding-left: 0;
     }
 
 
